# Composed-Mixture-of-Experts-Engine

./: .pre-commit-config.yaml  README.md  RESULTS.md  readme.md  roadmap.md
DecisionTrees/: Readme.md
Density-Based Spatial Clustering of Applications with Noise/: Readme.md
Expectation-Maximization/: readme.md
Gaussian Mixture Model/: readme.md
IndependentComponentAnalysis/: Readme.md
KnearestNeighbour/: KNNRegressor.py
LassoRegression/: readme.md
LinearRegression/: Readme.md
LogisticRegression/: Readme.md
Naive Bayes/: readme.md
Neural Networks/: GenerativeAdversarialNetwork.py  MultiLayerPerceptronRegression.py  Readme.md  SelfAttentionMechanism.py  (+4 more)
moe-engine/: Makefile  README.md  pyproject.toml  requirements.txt  roadmap.md  train.py
moe-engine/benchmarks/: BENCHMARKS.md  cpu_results_colab.json  cpu_results_colab_run2.json  gpu_results_a100.json  gpu_results_t4.json  run_benchmark.py
moe-engine/configs/: default.yaml  large_scale.yaml  smoke.yaml
moe-engine/deploy/docker/: Dockerfile  docker-compose.yml  prometheus.yml
moe-engine/deploy/k8s/: configmap.yaml  namespace.yaml  pvc.yaml  training-job-multinode.yaml  training-job.yaml
moe-engine/examples/: 01_router_kernel.py  02_moe_layer.py  03_config_system.py  04_model_registry.py  05_telemetry.py  06_checkpoint.py  07_custom_expert.py  README.md
moe-engine/notebooks/: moe_engine_A100_validation.ipynb  moe_engine_v032_T4_validation.ipynb
moe-engine/pkg/: __init__.py
moe-engine/pkg/distributed/: __init__.py  data_parallel.py  expert_parallel.py  mesh.py  moe_layer.py  parallel_mesh.py  pipeline_parallel.py  router.py  sequence_parallel.py  tensor_parallel.py
moe-engine/pkg/elastic/: __init__.py  fault_monitor.py
moe-engine/pkg/kernels/: __init__.py  moe_router.py
moe-engine/pkg/models/: __init__.py  moe.py  registry.py
moe-engine/pkg/telemetry/: __init__.py  logger.py
moe-engine/pkg/utils/: __init__.py  config.py  mfu.py
moe-engine/scripts/: cli.py  launch.sh  reproduce.py  validate_config.py
moe-engine/tests/: _chaos_worker.py  conftest.py  mock_dist.py  run_numerics_tests.py  test_capacity_dropping.py  test_chaos.py  test_config.py  test_distributed.py  test_distributed_invariants.py  test_elastic.py  test_elastic_v02.py  test_kernels.py  test_kernels_numerics.py  test_mfu.py  test_mfu_v02.py  test_mock_dist.py  test_pipeline_parallel.py  test_properties.py  test_registry.py  test_router.py  test_routing_quality.py  test_sequence_parallel_v03.py  test_smoke_e2e.py  test_telemetry.py  test_tensor_parallel.py
(+260 files in other folders)
